# AI-Native-Hedge-Fund

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  Makefile  README.md  TODO.md  docker-compose.yml  plan.md  pyproject.toml  six-month-roadmap.md  summary.md  workflow.md
docs/decisions/: 001_database_choice.md
meridian/backtest/: __init__.py  benchmarks.py  costs.py  engine.py  metrics.py  portfolio.py  report.py  validators.py
meridian/config/: __init__.py  constants.py  settings.py  universe.py
meridian/core/: exceptions.py  logging.py  types.py
meridian/features/: __init__.py  base.py  cross_sectional.py  macro.py  pipeline.py  registry.py  store.py  technical.py  volatility.py
meridian/regimes/: __init__.py  analysis.py  clustering.py  detector.py  pca.py  visualization.py
notebooks/: 01_data_exploration.ipynb
scripts/: ingest_historical.py  setup_db.py
tests/: conftest.py
tests/fixtures/: sample_data.py
tests/test_backtest/: test_benchmarks.py  test_costs.py  test_engine.py  test_integration.py  test_metrics.py  test_portfolio.py  test_validators.py
tests/test_core/: test_exceptions.py
tests/test_data/: test_ingest.py  test_providers.py  test_storage.py  test_validation.py
tests/test_features/: test_cross_sectional.py  test_lookahead.py  test_macro.py  test_store.py  test_technical.py  test_volatility.py  test_z_pipeline.py
tests/test_regimes/: test_clustering.py  test_detector.py  test_lookahead_regimes.py  test_pca.py
