[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meridian"
version = "0.1.0"
description = "AI-native hedge fund: LLM agents + ML experts for systematic trading"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.1",
    "numpy>=1.25",
    "duckdb>=0.9",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "structlog>=23.2",
    "yfinance>=0.2.31",
    "exchange-calendars>=4.5",
    "tenacity>=8.2",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.23",
    "ruff>=0.1.9",
    "mypy>=1.8",
    "pandas-stubs>=2.1",
    "ipykernel>=6.27",
    "jupyter>=1.0",
    "matplotlib>=3.8",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
strict_markers = true
markers = [
    "integration: marks tests that hit real APIs (deselect with '-m \"not integration\"')",
]
